--- a/ProlificLibrary/Base.lproj/Main.storyboard
+++ b/ProlificLibrary/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qik-Vc-dTK">
-                                <rect key="frame" x="101" y="165" width="162" height="36"/>
+                                <rect key="frame" x="101" y="158" width="162" height="36"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Author">
                                         <attributes>
@@ -60,7 +60,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6S-de-zA6">
-                                <rect key="frame" x="206" y="222" width="143" height="36"/>
+                                <rect key="frame" x="206" y="197" width="143" height="36"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Publisher">
                                         <attributes>
@@ -73,19 +73,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="tag" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H3S-Fd-Lu3">
-                                <rect key="frame" x="151" y="281" width="162" height="37"/>
+                                <rect key="frame" x="151" y="235" width="162" height="37"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Publisher :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckl-14-Lcp">
-                                <rect key="frame" x="101" y="229" width="77" height="21"/>
+                                <rect key="frame" x="101" y="204" width="77" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tI2-yD-VIa">
-                                <rect key="frame" x="101" y="289" width="37" height="21"/>
+                                <rect key="frame" x="101" y="243" width="37" height="21"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Tag :">
                                         <attributes>
@@ -98,7 +98,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Last check out time :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDR-dD-2jw">
-                                <rect key="frame" x="101" y="340" width="148" height="21"/>
+                                <rect key="frame" x="101" y="284" width="148" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -121,8 +121,14 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yDk-oL-42F">
-                                <rect key="frame" x="101" y="385" width="174" height="50"/>
+                                <rect key="frame" x="101" y="313" width="174" height="37"/>
                                 <attributedString key="attributedText"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gs9-xl-e7X">
+                                <rect key="frame" x="103" y="361" width="259" height="32"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -136,15 +142,19 @@
                             <constraint firstItem="S6S-de-zA6" firstAttribute="leading" secondItem="ckl-14-Lcp" secondAttribute="trailing" constant="10" id="6k8-di-5Fe"/>
                             <constraint firstItem="PDR-dD-2jw" firstAttribute="leading" secondItem="tI2-yD-VIa" secondAttribute="leading" id="BtH-8H-Ntw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="yDk-oL-42F" secondAttribute="trailing" id="GMF-66-WDd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gs9-xl-e7X" secondAttribute="trailing" constant="20" id="OjH-hw-a0c"/>
                             <constraint firstItem="ckl-14-Lcp" firstAttribute="leading" secondItem="Qik-Vc-dTK" secondAttribute="leading" id="SjC-Mt-eX2"/>
+                            <constraint firstItem="gs9-xl-e7X" firstAttribute="top" secondItem="yDk-oL-42F" secondAttribute="bottom" constant="3" id="Ya9-8g-WGk"/>
                             <constraint firstAttribute="trailingMargin" secondItem="PDR-dD-2jw" secondAttribute="trailing" id="d4E-cB-PQU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="p0C-mZ-jMJ" secondAttribute="trailing" constant="20" id="kdz-tO-X1h"/>
-                            <constraint firstItem="p0C-mZ-jMJ" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="20" id="n6G-uc-SQc"/>
+                            <constraint firstItem="p0C-mZ-jMJ" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="10" id="n6G-uc-SQc"/>
                             <constraint firstAttribute="trailingMargin" secondItem="S6S-de-zA6" secondAttribute="trailing" id="qHS-Bk-hJU"/>
                             <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" secondItem="p0C-mZ-jMJ" secondAttribute="bottom" constant="50" id="rOa-cl-Bss"/>
+                            <constraint firstItem="gs9-xl-e7X" firstAttribute="leading" secondItem="PDR-dD-2jw" secondAttribute="leading" id="usa-vF-R2J"/>
+                            <constraint firstItem="yDk-oL-42F" firstAttribute="top" secondItem="PDR-dD-2jw" secondAttribute="bottom" constant="13" id="v2c-5R-MsU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Lea-sX-eqk" secondAttribute="trailing" id="wUr-8o-gaC"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Qik-Vc-dTK" secondAttribute="trailing" id="wnE-S1-DRF"/>
-                            <constraint firstItem="Lea-sX-eqk" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="20" id="y1S-5a-G9s"/>
+                            <constraint firstItem="Lea-sX-eqk" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="10" id="y1S-5a-G9s"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -152,6 +162,7 @@
                     <connections>
                         <outlet property="authorLbl" destination="Qik-Vc-dTK" id="Gs9-zo-G8h"/>
                         <outlet property="catergoryLbl" destination="H3S-Fd-Lu3" id="xMU-pM-Pns"/>
+                        <outlet property="checkOutByLbl" destination="gs9-xl-e7X" id="HlQ-gM-2uP"/>
                         <outlet property="checkoutLbl" destination="yDk-oL-42F" id="VK9-aV-eLl"/>
                         <outlet property="publisherLbl" destination="S6S-de-zA6" id="92H-BN-9OP"/>
                         <outlet property="titleLbl" destination="Lea-sX-eqk" id="WjL-jB-PHZ"/>
